# bvarta-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: pipeline.yaml
job/: pipeline.py
src/pipeline/: bronze.py  dq_report.py  gold.py  output_validator.py  schema_guard.py  silver.py
tests/: conftest.py  test_bronze.py  test_date_filter.py  test_dq_report.py  test_gold.py  test_output_validator.py  test_schema_guard.py  test_silver.py
