[project]
name = "bvarta-pipeline"
version = "0.1.0"
description = "Batch data pipeline – Bvarta Data Engineer Challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=4.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]